// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionRowRecipientIcon should render avatar 1`] = `
<DocumentFragment>
  <div
    class="ring-theme-background bg-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black shrink-0 css-8d0u1i"
    data-testid="Avatar"
  >
    <div
      class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
    >
      <img
        alt="test"
        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
        title="test"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TransactionRowRecipientIcon should render compact 1`] = `
<DocumentFragment>
  <span
    class="flex h-5 w-5 items-center justify-center text-theme-text dark:text-theme-secondary-600"
    data-testid="TransactionRowRecipientIcon"
  >
    <div
      class="css-1i4b0eq"
      height="20"
      width="20"
    >
      <svg>
        second-signature.svg
      </svg>
    </div>
  </span>
</DocumentFragment>
`;

exports[`TransactionRowRecipientIcon should render icon 1`] = `
<DocumentFragment>
  <div
    class="border-theme-text text-theme-text dark:border-theme-secondary-600 dark:text-theme-secondary-600 ring-theme-background bg-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black ring-theme-background duration-100 css-14jhlj1"
    data-testid="TransactionRowRecipientIcon"
  >
    <div
      class="css-1i4b0eq"
      height="20"
      width="20"
    >
      <svg>
        second-signature.svg
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
